Adding products api
