# storage/api-docs/api-docs.json
@@ -358,11 +358,73 @@
         "/api/categories/{company_id}": {
             "get": {
                 "tags": [
-                    "Category"
+                    "Categories"
                 ],
                 "summary": "All categories",
                 "description": "All categories",
                 "operationId": "all_categories",
+                "parameters": [
+                    {
+                        "name": "company_id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "number",
+                                            "example": 1
+                                        },
+                                        "name": {
+                                            "type": "string",
+                                            "example": ""
+                                        },
+                                        "icon": {
+                                            "type": "string",
+                                            "example": ""
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "NOT FOUND",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": ""
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/products/{company_id}": {
+            "get": {
+                "tags": [
+                    "Products"
+                ],
+                "summary": "All products",
+                "description": "All products",
+                "operationId": "all_products",
                 "parameters": [
                     {
                         "name": "company_id",
@@ -495,8 +557,12 @@
             "description": "API Endpoints de Autenticación"
         },
         {
-            "name": "Category",
-            "description": "Category"
+            "name": "Categories",
+            "description": "Categories"
+        },
+        {
+            "name": "Products",
+            "description": "Products"
         },
         {
             "name": "Test",
